--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: 18094224253@163.com
 #linkedIn_username: gaohaoyang
 #dribbble_username:
 
-description_footer: 专注于自己的生活！
+description_footer: 如鱼饮水，冷暖自知！
 
 # comments
 # two ways to comment, only choose one, and use your own short name
