--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Yin Guoqing
 brief-intro: Postgraduate of NJUPT
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yinmaybe.github.io" # the base hostname & protocol for your site
+url: "https://yinguoqing123.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
@@ -17,7 +17,7 @@ encoding: utf-8
 # other links
 #twitter_username: gaohaoyang126
 #facebook_username: gaohaoyang.water
-github_username: yinmaybe
+github_username: yinguoqing123
 email: 18094224253@163.com
 #weibo_username: 3115521wh
 #zhihu_username: gaohaoyang
@@ -30,7 +30,7 @@ description_footer: 如鱼饮水，冷暖自知！
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
 duoshuo_shortname: #hygblog
-disqus_shortname: yinmaybe-github-io
+disqus_shortname: yinguoqing123-github-io
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
@@ -60,4 +60,4 @@ excerpt_separator: "\n\n\n\n"
 plugins: [jekyll-paginate]
 paginate: 6
 
-theme: jekyll-theme-time-machine
+#theme: jekyll-theme-time-machine
